[gd_scene load_steps=2 format=2]

[ext_resource path="res://test_cards.gd" type="Script" id=1]

[node name="node_2d" type="Control"]
script = ExtResource( 1 )

[node name="button_test" type="Button" parent="."]
margin_left = 675.0
margin_top = 146.0
margin_right = 1044.0
margin_bottom = 608.0

[node name="button_card1" type="Button" parent="."]
margin_left = 99.0
margin_top = 749.0
margin_right = 411.0
margin_bottom = 969.0
rect_pivot_offset = Vector2( -2343, -1477 )

[node name="button_card2" type="Button" parent="."]
margin_left = 702.0
margin_top = 756.0
margin_right = 1014.0
margin_bottom = 976.0
rect_pivot_offset = Vector2( -2343, -1477 )

[node name="button_card3" type="Button" parent="."]
margin_left = 1395.0
margin_top = 766.0
margin_right = 1707.0
margin_bottom = 986.0
rect_pivot_offset = Vector2( -2343, -1477 )

[connection signal="pressed" from="button_test" to="." method="_on_button_test_pressed"]
[connection signal="pressed" from="button_card1" to="." method="_on_button_card1_pressed"]
[connection signal="pressed" from="button_card2" to="." method="_on_button_card2_pressed"]
[connection signal="pressed" from="button_card3" to="." method="_on_button_card3_pressed"]
